--- a/style.css
+++ b/style.css
@@ -88,6 +88,18 @@
 .top-container {
   background-image: url(Assets/images/v7-homepage1.jpg);
   padding: 9rem;
+  position: relative;
+  z-index: 2;
+}
+.top-container :after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.226);
+  z-index: 2;
 }
 .find {
   font-size: 2.3rem;
@@ -96,6 +108,7 @@
   margin: 0;
   padding-top: 5rem;
   font-weight: 500;
+  
 }
 
 .search {
@@ -150,14 +163,21 @@ gap: 0.3rem;
 background-color: var(--primary);
 margin-left: 4.5%;
 margin-right: auto;
+
 } 
 
-/* Section:Sticky */
 .sticky {
   box-shadow: 0 4px 15px rgba(0,0,0,.2);
   padding: 3rem;
   margin-left: 10%;
   margin-right: 10%;
+  position: relative;
+  position: sticky;
+  top: -20rem;
+  z-index: -20;
+  left: 0;
+
+
 } 
 /* .main-body {
   margin-left: 10%;
@@ -478,8 +498,79 @@ margin-right: auto;
 }
 
 /* SEction: Listdetails */
-.downnavbar {
+/* .downnavbar {
   color: var(--average);
   border-bottom: 1px solid var(--average);
+} */
+.downnavbar {
+  border-bottom: 1px solid var(--average);
+  /* margin-top: 4rem; */
+  text-align: center;
+  margin-top: 3rem;
+  margin-left: 10rem;
+  margin-right: 8rem;
+  margin-bottom: 1rem;
+}
+.downnavbar span {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+  color: var(--average);
+}
+.downlist {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-left: 10%;
+  margin-right: 10%;
+  list-style: none;
+}
+.tophotels {
+  margin-left: 3rem;
+  color: var(--main);
+}
+.topdestination {
+  margin-left: 4rem;
+  color: var(--main);
+}
+.topcities {
+  margin-left: 5rem;
+  color: var(--main);
+}
+.communites {
+  margin-left: 5.5rem;
+  color: var(--main);
+}
+.company {
+  margin-left: 7.5rem;
+  color: var(--main);
+}
+.lines {
+  display: flex;
+  flex-direction: row;
+  margin-left: 10%;
+  margin-top: 5rem;
+  font-size: 1rem;
+}
+.fab {
+  font-size: 1rem;
+  color: var(--average);
+  background-color: var(--light);
+  margin-left: 10%;
+}
+.gov {
+  height: 3.5rem;
+  width: 4rem;
+}
+.copy {
+  color: var(--average);
+  margin-top: 1.2rem;
+}
+.cert {
+  margin-left: 2rem;
+  margin-bottom: 3rem;
+}
+.certified {
+  margin-left: 36%;
+  margin-top: 1rem;
+  color: var(--average);
 }
   
